--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tennis de Table Cloysien",
+  "name": "tennis_table_cloysien",
   "version": "0.1.0",
   "private": true,
   "scripts": {
